added all videos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -338,6 +339,11 @@
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
                         <h4>Mr Anwar</h4>
                         <p class="text-muted">Managing Director</p>
+                        <p>
+                            A Strategist and a Visionary Businessman from Kerala who became a Pioneer in Train Branding and Railway Advertising during the last 1 decade. His passion and foresight about Railway advertising domain helped him achieve the success. A hardworking businessman who understands and helps solve client’s requirements.
+                            <br/>
+                            With over a decade of experience in the fields of Advertising and Event Management, Mr. Anwar is actively involved in overall management of the company and overseeing Operations and Creative works.
+                        </p>
                         <!-- <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -366,8 +372,11 @@
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Mr.Zulfi</h4>
+                        <h4>Mr. Zulfikar</h4>
                         <p class="text-muted">Executive Director</p>
+                        <p>
+                            A creative enthusiast and his youthful exuberance helped him to build a team which has earned a name and success in events. Being part of the director board since the inception of the company, Mr. Zulfikar takes control of all the marketing and coordination activities of Espanio Events.
+                        </p>
                         <!-- <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -377,11 +386,6 @@
                             </li>
                         </ul> -->
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
             </div>
         </div>
