--- a/ezpanio-wedding/index.html
+++ b/ezpanio-wedding/index.html
@@ -46,7 +46,7 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right">
-						<li class="scroll"><a href="../index.html">E - Home</a></li>
+						<li><a href="../index.html">E - Home</a></li>
 						<li class="scroll active"><a href="#navigation">Home</a></li> 
 						<li class="scroll"><a href="#about-us">About Us</a></li> 
 						<li class="scroll"><a href="#services">Services</a></li>  
@@ -59,15 +59,17 @@
 	</header> <!--/#navigation--> 
 
 	<section id="home">
-		<div class="home-pattern"></div>
+		<embed src="https://www.youtube.com/v/YnIFYKChw9M?autoplay=1&loop=1&controls=0&autohide=1&playlist=YnIFYKChw9M" class="container" style="left:0;width: 100%; height: 100vh;padding: 0; position: fixed;">
+		<!-- <div class="home-pattern"></div>
 		<div id="main-carousel" class="carousel slide" data-ride="carousel"> 
 			<ol class="carousel-indicators">
 				<li data-target="#main-carousel" data-slide-to="0" class="active"></li>
 				<li data-target="#main-carousel" data-slide-to="1"></li>
 				<li data-target="#main-carousel" data-slide-to="2"></li>
-			</ol><!--/.carousel-indicators--> 
-			<div class="carousel-inner">
-				<div class="item active" style="background-image: url(images/slider/slide3.jpg)"> 
+			</ol> --><!--/.carousel-indicators--> 
+			 <!-- <div class="carousel-inner"> -->
+			 	
+				<!-- <div class="item active" style="background-image: url(images/slider/slide3.jpg)"> 
 					<div class="carousel-caption"> 
 						<div> 
 							<h2 class="heading animated bounceInDown">Espanio</h2> 
@@ -76,21 +78,22 @@
 					</div> 
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)"> 
-					<div class="carousel-caption"> <div> 
-						<h2 class="heading animated bounceInDown">Espanio</h2> 
-						<p class="animated bounceInUp">Royal type</p>  
+					<div class="carousel-caption"> 
+						<div> 
+							<h2 class="heading animated bounceInDown">Espanio</h2> 
+							<p class="animated bounceInUp">Royal type</p>  
+						</div> 
 					</div> 
-				</div> 
-			</div> 
-			<div class="item" style="background-image: url(images/slider/slide1.jpg)"> 
-				<div class="carousel-caption"> 
-					<div> 
-						<h2 class="heading animated bounceInDown">Espanio</h2> 
-						<p class="animated bounceInUp">Royal type</p> 
-					</div> 
-				</div> 
+				</div>  -->
+				
+			<!-- </div>  -->
+			<div style="background-color: rgba(0,0,0,.7);position: relative; height: 100vh; padding: 0;"> 
+						<!-- <div> 
+							<h2 class="heading animated bounceInDown">Espanio</h2> 
+							<p class="animated bounceInUp">Royal type</p> 
+						</div>  --> 
 			</div>
-		</div><!--/.carousel-inner-->
+			<!--/.carousel-inner
 
 		<a class="carousel-left member-carousel-control hidden-xs" href="#main-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
 		<a class="carousel-right member-carousel-control hidden-xs" href="#main-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
@@ -98,7 +101,7 @@
 
 </section><!--/#home-->
 
-<section id="about-us">
+<section id="about-us" style="background-color: #fff;position: relative;">
 	<div class="container">
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
@@ -110,7 +113,7 @@
 		</div>
 	</section><!--/#about-us-->
 
-	<section id="services" class="parallax-section">
+	<section id="services" class="parallax-section" style="background-color: rgba(0,0,0,.7);position: relative;">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
@@ -158,7 +161,7 @@
 			</div>
 		</section><!--/#service-->
 
-		<section id="portfolio">
+		<section id="portfolio" style="background-color: #fff;position: relative;">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-sm-8 col-sm-offset-2">
